Fixed the issue with <h2> not showing in the beverage menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,11 +147,11 @@ body {
   }
 
   .wifi-div h1 {
-    font-size: xx-large;
+    font-size: 4em;
   }
 
   .wifi-div p {
-    font-size: large;
+    font-size: 3em;
   }
 
   .wifi-div img {
