--- a/css/tabs.css
+++ b/css/tabs.css
@@ -15,7 +15,6 @@
   .tabs input[name="tab-control"] {
     display: none;
   }
-  .tabs .content section h2,
   .tabs ul li label {
     font-family: "Montserrat";
     font-weight: bold;
@@ -97,20 +96,6 @@
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
     line-height: 1.4;
-  }
-  .tabs .content section .beverage-header-div h2 {
-    color: #428bff;
-    display: none;
-  }
-  .tabs .content section .beverage-header-div h2::after {
-    content: "";
-    position: relative;
-    display: block;
-    width: 30px;
-    height: 3px;
-    background: #428bff;
-    margin-top: 5px;
-    left: 1px;
   }
   .tabs
     input[name="tab-control"]:nth-of-type(1):checked
@@ -248,7 +233,7 @@
     > section:nth-child(4) {
     display: block;
   }
-  
+
   @keyframes content {
     from {
       opacity: 0;
@@ -283,8 +268,5 @@
     }
     .tabs .content {
       margin-top: 20px;
-    }
-    .tabs .content section h2 {
-      display: block;
     }
   }
